changes for kiosk mode

--- a/examples/anonymous_auth.html
+++ b/examples/anonymous_auth.html
@@ -7,25 +7,10 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.2/jquery.min.js"></script>
 
   <!-- Download from https://github.com/firebase/Firechat -->
-  <link rel="stylesheet" href="../dist/0.1.5/firechat-default.min.css" />
-  <script src="../dist/0.1.5/firechat-default.min.js"></script>
-  <style>
-    #firechat-wrapper {
-      height: 475px;
-      max-width: 325px;
-      padding: 10px;
-      border: 1px solid #ccc;
-      background-color: #fff;
-      margin: 50px auto;
-      text-align: center;
-      -webkit-border-radius: 4px;
-      -moz-border-radius: 4px;
-      border-radius: 4px;
-      -webkit-box-shadow: 0 5px 25px #666;
-      -moz-box-shadow: 0 5px 25px #666;
-      box-shadow: 0 5px 25px #666;
-    }
-  </style>
+  <link rel="stylesheet" href="../dist/0.1.5/firechat-kiosk.css" />
+  <link href='http://fonts.googleapis.com/css?family=Droid+Sans+Mono' rel='stylesheet' type='text/css'>
+  <script src="../dist/0.1.5/firechat-default.js"></script>
+
 </head>
 
 <!--
